Making several rbconfig properties better match what MRI reports. JRUBY-454.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3484 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -100,13 +100,23 @@
     <taskdef name="jruby-serialize" classname="org.jruby.util.ant.JRubySerialize">
       <classpath path="${jruby.classes.dir}"/>
     </taskdef>
-
+    
     <copy todir="${jruby.classes.dir}">
-      <fileset dir="${src.dir}">
-        <include name="**/*.properties"/>
-        <include name="**/*.rb"/>
-        <exclude name="builtin/**/*.rb"/>
-      </fileset>
+        <fileset dir="${src.dir}">
+            <include name="**/*.rb"/>
+            <exclude name="builtin/**/*.rb"/>
+        </fileset>
+    </copy>
+    
+    <copy todir="${jruby.classes.dir}">
+        <fileset dir="${src.dir}">
+            <include name="**/*.properties"/>
+        </fileset>
+        <filterset>
+            <filter token="os.arch" value="${os.arch}"/>
+            <filter token="java.specification.version" value="${java.specification.version}"/>
+            <filter token="javac.version" value="${javac.version}"/>
+        </filterset>
     </copy>
   </target>
 
