--- a/src/jruby.properties
+++ b/src/jruby.properties
@@ -2,5 +2,6 @@ version.ruby.major=1.8
 version.ruby=1.8.5
 release.date=0
 version.jruby=0.9.8
-build.jruby=@os.arch@-java@java.specification.version@
+build.jruby=java@java.specification.version@
+target.jruby=java@javac.version@
 revision.jruby=$Revision$
