--- a/src/jruby.properties
+++ b/src/jruby.properties
@@ -1,6 +1,6 @@
 version.ruby.major=1.8
 version.ruby=1.8.5
-release.date=0
+release.date=@build.date@
 version.jruby=0.9.8
 build.jruby=java@java.specification.version@
 target.jruby=java@javac.version@
