- fix date format in build date (MM instead of mm) - inject build properties into maven artifacts also
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3489 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -109,10 +109,10 @@
     </copy>
     
     <tstamp>
-        <format property="build.date" pattern="yyyy-mm-dd"/>
+        <format property="build.date" pattern="yyyy-MM-dd"/>
     </tstamp>
     
-    <copy todir="${jruby.classes.dir}">
+    <copy todir="${jruby.classes.dir}" overwrite="true">
         <fileset dir="${src.dir}">
             <include name="**/*.properties"/>
         </fileset>
