--- a/src/jruby.properties
+++ b/src/jruby.properties
@@ -1,7 +1,7 @@
 version.ruby.major=1.8
 version.ruby=1.8.5
 release.date=@build.date@
-version.jruby=0.9.8
+version.jruby=0.9.9-pre
 build.jruby=java@java.specification.version@
 target.jruby=java@javac.version@
 revision.jruby=$Revision$
