Make "ant test" test the compiler for this week.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3597 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -320,7 +320,8 @@
     </emma>
   </target>
 
-  <target name="test" depends="copy-test-files,instrument,run-junit,coverage-report"/>
+  <!-- This now has enabled the compiler by default; we may want to run both with and without compilation later -->
+  <target name="test" depends="copy-test-files,instrument,enable-compiler,run-junit,coverage-report"/>
 
   <target name="test-compiler" depends="copy-test-files,instrument,enable-compiler,run-junit,coverage-report"/>
   
