--- a/maven/jruby-rake-plugin/pom.xml
+++ b/maven/jruby-rake-plugin/pom.xml
@@ -34,4 +34,17 @@
       <version>${project.version}</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <configuration>
+          <!-- Note: This is to allow typing "mvn jruby-rake:[goalname]" without having to type the -->
+          <!-- fully qualified name on the command line -->
+          <goalPrefix>jruby-rake</goalPrefix>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
