--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -16,11 +16,24 @@
 
   <dependencies>
     <dependency>
-      <groupId>requireTest</groupId>
-      <artifactId>requireTest</artifactId>
-      <version>SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/../../test/requireTest.jar</systemPath>
+      <groupId>backport-util-concurrent</groupId>
+      <artifactId>backport-util-concurrent</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>0.9.91</version>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>2.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-commons</artifactId>
+      <version>2.2.3</version>
     </dependency>
   </dependencies>
 
@@ -74,7 +87,11 @@
                 <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask"
                   classpathref="maven.plugin.classpath"/>
                 <junit fork="yes" forkMode="once" haltonfailure="true" dir="${project.build.testOutputDirectory}" maxmemory="384M">
-                  <classpath refid="maven.test.classpath"/>
+                  <classpath>
+                    <path refid="maven.test.classpath"/>
+                    <path refid="maven.plugin.classpath"/>
+                    <pathelement location="${project.basedir}/../../test/requireTest.jar"/>
+                  </classpath>
                   <formatter type="plain"/>
                   <formatter type="xml"/>
                   <formatter type="brief" usefile="false"/>
@@ -86,6 +103,8 @@
                   <test name="org.jruby.test.MainTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
                   <test name="org.jruby.test.ScriptTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
                   <test name="org.jruby.test.TestUnitTestSuite" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jvyamlb.YAMLLoadTest" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
+                  <test name="org.jvyamlb.YAMLDumpTest" unless="maven.test.skip" todir="${project.build.directory}/surefire-reports"/>
                 </junit>
               </tasks>
             </configuration>
