Upping version to 1.0.0RC1
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3631 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/src/jruby.properties
+++ b/src/jruby.properties
@@ -1,7 +1,7 @@
 version.ruby.major=1.8
 version.ruby=1.8.5
 release.date=@build.date@
-version.jruby=0.9.9
+version.jruby=1.0.0RC1
 build.jruby=java@java.specification.version@
 target.jruby=java@javac.version@
 revision.jruby=$Revision$
