change release property in pom
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3634 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/pom.xml
+++ b/pom.xml
@@ -229,7 +229,8 @@
       <id>jruby-release</id>
       <activation>
         <property>
-          <name>release</name>
+          <name>performRelease</name>
+          <value>true</value>
         </property>
       </activation>
       <properties>
