POM versions are at 1.0RC3-SNAPSHOT
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3689 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/maven/jruby-jdk14/pom.xml
+++ b/maven/jruby-jdk14/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>shared</artifactId>
-    <version>1.0RC2</version>
+    <version>1.0RC3-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jruby</groupId>
   <artifactId>jruby-jdk14</artifactId>
   <packaging>jar</packaging>
-  <version>1.0RC2</version>
+  <version>1.0RC3-SNAPSHOT</version>
   <name>JRuby JDK 1.4</name>
 
   <dependencies>
