JRUBY-994: Remove jruby serialization feature
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3734 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jruby</name>
+	<name>jruby_trunk</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -8,16 +8,6 @@
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
-			<triggers>auto,full,incremental,</triggers>
-			<arguments>
-				<dictionary>
-					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/Serialize Builtin Files.launch</value>
-				</dictionary>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
