--- a/build.xml
+++ b/build.xml
@@ -97,14 +97,9 @@
       <classpath refid="build.classpath"/>
     </javac>
 
-    <taskdef name="jruby-serialize" classname="org.jruby.util.ant.JRubySerialize">
-      <classpath path="${jruby.classes.dir}"/>
-    </taskdef>
-    
     <copy todir="${jruby.classes.dir}">
         <fileset dir="${src.dir}">
             <include name="**/*.rb"/>
-            <exclude name="builtin/**/*.rb"/>
         </fileset>
     </copy>
     
@@ -137,16 +132,7 @@
           description="Compile the source files for the project.">
   </target>
 
-  <target name="serialize" depends="compile"
-          description="Serializes builting Ruby libraries into Java format">
-    <jruby-serialize destdir="${jruby.classes.dir}">
-      <fileset dir="${src.dir}">
-        <include name="builtin/**/*.rb"/>
-      </fileset>
-    </jruby-serialize>
-  </target>
-
-  <target name="generate-method-classes" depends="serialize">
+  <target name="generate-method-classes" depends="compile">
     <touch file="${build.dir}/__empty.rb"/>
     <java classname="org.jruby.Main" fork="true">
       <classpath refid="build.classpath"/>
@@ -156,15 +142,6 @@
       <arg value="${build.dir}/__empty.rb"/>
     </java>
     <delete file="${build.dir}/__empty.rb" quiet="true"/>
-  </target>
-
-  <target name="serialize.rubylib" depends="compile"
-          description="Serializes the core Ruby library into Java format">
-    <jruby-serialize destdir="${jruby.classes.dir}" verbose="true">
-      <fileset dir="${ruby.home}/lib/ruby/1.8">
-        <patternset refid="ruby.src.pattern"/>
-      </fileset>
-    </jruby-serialize>
   </target>
 
   <target name="jar-jruby" depends="generate-method-classes">
@@ -220,7 +197,6 @@
         <fileset dir="${jruby.classes.dir}">
           <include name="**/*.class"/>
         <include name="**/*.properties"/>
-        <include name="**/*.rb.ast.ser"/>
           <exclude name="org/jruby/util/ant/**/*.class"/>
         </fileset>
         <fileset dir="${basedir}/lib/ruby/1.8">
@@ -264,7 +240,7 @@
   <target name="jar" depends="jar-jruby" description="Create the jruby.jar file">
   </target>
 
-  <target name="jar.standalone" depends="generate-method-classes, serialize.rubylib, jar"
+  <target name="jar.standalone" depends="generate-method-classes, jar"
     description="Create a standalone jruby.jar file using libraries from RUBY_HOME/lib/ruby/1.8"/>
 
   <target name="compile-test" depends="jar" description="Compile the unit tests">
