Add jar dependency of spec
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3749 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -271,7 +271,7 @@
     </java>
   </target>
 
-  <target name="spec" depends="install-gems">
+  <target name="spec" depends="jar,install-gems">
     <java classname="org.jruby.Main" fork="true" failonerror="true">
       <classpath refid="build.classpath"/>
       <classpath path="${jruby.classes.dir}"/>
@@ -279,7 +279,7 @@
       <arg value="-S"/>
       <arg value="spec"/>
       <arg value="--format"/>
-      <arg value="errors"/>
+      <arg value="e"/>
       <arg value="test/externals/rubinius/spec"/>
     </java>
   </target>
