--- a/build.xml
+++ b/build.xml
@@ -275,8 +275,9 @@
       <arg value="rake"/>
     </java>
   </target>
-
-  <target name="spec" depends="jar,install-gems">
+  
+  <target name="run-spec">
+    <echo message="Running spec(s) located at: ${SPEC}"/>
     <java classname="org.jruby.Main" fork="true" failonerror="true">
       <classpath refid="build.classpath"/>
       <classpath path="${jruby.classes.dir}"/>
@@ -285,8 +286,14 @@
       <arg value="spec"/>
       <arg value="--format"/>
       <arg value="e"/>
-      <arg value="test/externals/rubinius/spec"/>
+      <arg value="${SPEC}"/>
     </java>
+  </target>
+
+  <target name="spec" depends="jar,install-gems">
+    <antcall target="run-spec">
+        <param name="SPEC" value="test/externals/rubinius/spec"/>
+    </antcall>
   </target>
 
   <target name="emma" description="turns on EMMA instrumentation/reporting" >
@@ -323,10 +330,22 @@
   </target>
 
   <!-- This now has enabled the compiler by default; we may want to run both with and without compilation later -->
-  <target name="test" depends="copy-test-files,instrument,run-junit-compiled,run-junit-interpreted,coverage-report"/>
+  <target name="test" depends="copy-test-files,instrument,run-junit-compiled,run-junit-interpreted,coverage-report">
+  </target>
 
   <target name="test-compiled" depends="copy-test-files,run-junit-compiled"/>
   <target name="test-interpreted" depends="copy-test-files,run-junit-interpreted"/>
+  <target name="test-spec">
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/false_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/hash_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/integer_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/io_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/nil_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/objectspace_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/range_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/symbol_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/true_spec.rb"/></antcall>
+  </target>
   
   <target name="run-junit-interpreted" description="runs junit tests">
     <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${lib.dir}/junit.jar"/>
