--- a/build.xml
+++ b/build.xml
@@ -289,6 +289,21 @@
       <arg value="${SPEC}"/>
     </java>
   </target>
+  
+  <target name="run-spec-compiled">
+    <echo message="Running spec(s) located at: ${SPEC}"/>
+    <java classname="org.jruby.Main" fork="true" failonerror="true">
+      <classpath refid="build.classpath"/>
+      <classpath path="${jruby.classes.dir}"/>
+      <sysproperty key="jruby.home" value="${basedir}"/>
+      <sysproperty key="jruby.jit.threshold" value="0"/>
+      <arg value="-S"/>
+      <arg value="spec"/>
+      <arg value="--format"/>
+      <arg value="e"/>
+      <arg value="${SPEC}"/>
+    </java>
+  </target>
 
   <target name="spec" depends="jar,install-gems">
     <antcall target="run-spec">
@@ -336,7 +351,31 @@
   <target name="test-compiled" depends="copy-test-files,run-junit-compiled"/>
   <target name="test-interpreted" depends="copy-test-files,run-junit-interpreted"/>
   
-  <target name="test-spec" depends="install-gems">
+  <target name="test-spec" depends="test-spec-compiled, test-spec-interpreted"/>
+  
+  <target name="test-spec-compiled" depends="install-gems">
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/false_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/hash_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/integer_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/io_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/nil_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/objectspace_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/range_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/symbol_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/core/true_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/assignment_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/class_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/expression_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/array_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/execution_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/hash_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/numbers_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/symbol_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/library"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/parser"/></antcall>
+  </target>
+  
+  <target name="test-spec-interpreted" depends="install-gems">
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/false_spec.rb"/></antcall>
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/hash_spec.rb"/></antcall>
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/core/integer_spec.rb"/></antcall>
