Fix for JRUBY-1006, allows Rubinius defined_spec to run 100%. I make no guarantees about the correctness of defined? @@foo, but it's passing at least.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3801 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -371,6 +371,7 @@
     <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/expressions/if_spec.rb"/></antcall>
     <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/expressions/unless_spec.rb"/></antcall>
     <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/keywords/break_spec.rb"/></antcall>
+    <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/keywords/defined_spec.rb"/></antcall>
     <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/array_spec.rb"/></antcall>
     <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/execution_spec.rb"/></antcall>
     <antcall target="run-spec-compiled"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/hash_spec.rb"/></antcall>
@@ -398,6 +399,7 @@
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/language/expressions/if_spec.rb"/></antcall>
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/language/expressions/unless_spec.rb"/></antcall>
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/language/keywords/break_spec.rb"/></antcall>
+    <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/language/keywords/defined_spec.rb"/></antcall>
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/array_spec.rb"/></antcall>
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/execution_spec.rb"/></antcall>
     <antcall target="run-spec"><param name="SPEC" value="test/externals/rubinius/spec/language/literals/hash_spec.rb"/></antcall>
